syntax = "proto3";
package favourites;

option go_package = "favourites_grpc/favourites_grpc";

message ListFavouritesRequest {
  string userID = 1;
}

message Product {
  enum ProductStatus {
    _ = 0;
    CREATED = 1;
    POPULATED = 2;
  }

  string id = 1;
  string productID = 2;
  string userID = 3;
  ProductStatus status = 4;
  string title = 5;
  string image = 6;
}

message ListFavouritesResponse {
  repeated Product products = 1;
}

message FavouritesRequest {
  string productID = 1;
  string userID = 2;
}

message FavouritesResponse {
  bool success = 1;
}

message ProductInFavouritesResponse {
  bool inFavourites = 1;
}

service FavouritesService {
  rpc ListFavourites(ListFavouritesRequest) returns (ListFavouritesResponse) {}
  rpc MarkFavourite(FavouritesRequest) returns (FavouritesResponse) {}
  rpc UnMarkFavourite(FavouritesRequest) returns (FavouritesResponse) {}
  rpc ProductInFavourite(FavouritesRequest) returns (ProductInFavouritesResponse) {}
}
